welcome.lessons.welcome.conditions.Conditions.scala.error
Program:2: error: '(' expected but '{' found.
if{estFaceMur();recule};else{avance();}
  ^Program:5: error: illegal start of simple expression
	}
        ^